--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Home Page</h1>
+    <h1 style="font-family: Tektur; color: blue;">Home Page</h1>
     <h2>Git</h2>
     <h3>Class</h3>
 </body>
